--- a/css/syle.css
+++ b/css/syle.css
@@ -249,3 +249,20 @@ section {
   color: white;
 }
 
+.btn-color-1:hover{
+  background: rgb(0,0,0);
+}
+
+.btn-color-2{
+  background: none;
+
+}
+
+.btn-color-2:hover{
+  border: rgb(255,255,255) 0.1rem solid;
+  
+}
+
+.btn-container {
+  gap: 1rem
+}
