--- a/css/syle.css
+++ b/css/syle.css
@@ -1,9 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+/* GENERAL */
 
-@font-face {
-  font-family: myfont;
-  src: url(agra.ttf);
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
   margin: 0;
@@ -11,7 +8,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -22,14 +19,14 @@ p {
   color: rgb(85, 85, 85);
 }
 
-/*Transition*/
+/* TRANSITION */
 
 a,
 .btn {
-  transition: 300ms ease;
+  transition: all 300ms ease;
 }
 
-/*DESKTOP NAVIGATION*/
+/* DESKTOP NAV */
 
 nav,
 .nav-links {
@@ -44,9 +41,8 @@ nav {
 
 .nav-links {
   gap: 2rem;
-  list-style-type: none;
+  list-style: none;
   font-size: 1.5rem;
-  font-family: "Poppins", sans-serif !important;
 }
 
 a {
@@ -56,15 +52,22 @@ a {
 }
 
 a:hover {
-  color: coral;
-  text-decoration: wavy;
+  color: grey;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
 }
 
 .logo {
   font-size: 2rem;
 }
 
-/*Hamburger Menu*/
+.logo:hover {
+  cursor: default;
+}
+
+/* HAMBURGER MENU */
+
 #hamburger-nav {
   display: none;
 }
@@ -143,6 +146,8 @@ a:hover {
   transform: none;
 }
 
+/* SECTIONS */
+
 section {
   padding-top: 4vh;
   height: 96vh;
@@ -165,19 +170,15 @@ section {
 }
 
 .section__pic-container {
-
   display: flex;
-  width: 450px;
+  height: 400px;
+  width: 400px;
   margin: auto 0;
 }
-
-
 
 .section__text {
   align-self: center;
   text-align: center;
-  margin-bottom: 100px;
-  
 }
 
 .section__text p {
@@ -187,8 +188,6 @@ section {
 .section__text__p1 {
   text-align: center;
 }
-
-
 
 .section__text__p2 {
   font-size: 1.75rem;
@@ -232,9 +231,7 @@ section {
 
 .btn-color-1,
 .btn-color-2 {
-
   border: rgb(53, 53, 53) 0.1rem solid;
-
 }
 
 .btn-color-1:hover,
@@ -242,27 +239,316 @@ section {
   cursor: pointer;
 }
 
-
 .btn-color-1,
 .btn-color-2:hover {
   background: rgb(53, 53, 53);
   color: white;
 }
 
-.btn-color-1:hover{
-  background: rgb(0,0,0);
+.btn-color-1:hover {
+  background: rgb(0, 0, 0);
 }
 
-.btn-color-2{
+.btn-color-2 {
   background: none;
-
 }
 
-.btn-color-2:hover{
-  border: rgb(255,255,255) 0.1rem solid;
-  
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
 }
 
 .btn-container {
-  gap: 1rem
+  gap: 1rem;
+}
+
+/* ABOUT SECTION */
+
+#about {
+  position: relative;
+}
+
+.about-containers {
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+.about-details-container {
+  justify-content: center;
+  flex-direction: column;
+}
+
+.about-containers,
+.about-details-container {
+  display: flex;
+}
+
+.about-pic {
+  border-radius: 2rem;
+}
+
+.arrow {
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem;
+}
+
+.details-container {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+.section-container {
+  gap: 4rem;
+  height: 80%;
+}
+
+.section__pic-container {
+  height: 260px;
+  width: 400px;
+  margin: auto 0;
+}
+
+/* EXPERIENCE SECTION */
+
+#experience {
+  position: relative;
+}
+
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2rem;
+  justify-content: space-around;
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  
+}
+
+article .icon {
+  cursor: default;
+}
+
+/* PROJECTS SECTION */
+
+#projects {
+  position: relative;
+}
+
+
+
+.project-img {
+  border-radius: 1rem;
+  width: 50%;
+  height: 50%;
+}
+
+.project-title {
+ 
+  color: black;
+}
+
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
+}
+
+/* CONTACT */
+
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon {
+  cursor: default;
+}
+
+.email-icon {
+  height: 2.5rem;
+}
+
+/* FOOTER SECTION */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
+
+.section-container {
+  gap: 4rem;
+  height: 80%;
+}
+
+.section__pic-container {
+  height: 260px;
+  width: 400px;
+  margin: auto 0;
+}
+
+/* EXPERIENCE SECTION */
+
+#experience {
+  position: relative;
+}
+
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2rem;
+  justify-content: space-around;
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  
+}
+
+article .icon {
+  cursor: default;
+}
+
+/* PROJECTS SECTION */
+
+#projects {
+  position: relative;
+}
+
+
+
+.project-img {
+  border-radius: 1rem;
+  width: 65%;
+  height: 58%;
+}
+
+.project-title {
+ 
+  color: black;
+}
+
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
+}
+
+/* CONTACT */
+
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon {
+  cursor: default;
+}
+
+.email-icon {
+  height: 2.5rem;
+}
+
+/* FOOTER SECTION */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
 }
